<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="header_text">Weight of the package</string>
    <string name="ounces_text">"(in ounces)</string>
    <string name="base_text">"Base Cost:"</string>
    <string name="added_text">"Added Cost:"</string>
    <string name="total_text">"Total Shipping Cost:</string>
    <string name="zero_text" translatable="false">"$0.00"</string>
</resources>
