<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/shippingRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shipping_background"

        tools:context="edu.orangecoastcollege.a273.sbadajozcs.shippingcalculator.MainActivity">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/header_text"
              android:gravity="center" android:id="@+id/textView" android:textSize="18sp"
              android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true" android:layout_marginTop="16dp"/>
    <EditText android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:id="@+id/weightEditText"
              android:layout_marginTop="19dp"
              android:selectAllOnFocus="true"
              android:inputType="number"
              android:layout_below="@+id/textView" android:layout_centerHorizontal="true"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/ounces_text"
              android:gravity="center"
              android:id="@+id/textView2" android:textSize="12sp" android:layout_below="@+id/weightEditText"
              android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/base_text"
              android:layout_marginTop="34dp"
              android:id="@+id/textView3"
              android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/weightEditText"
              android:layout_alignStart="@+id/weightEditText"/>
    <TextView
            android:text="@string/zero_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalCostTextView"
            android:layout_alignBaseline="@+id/textView8" android:layout_alignBottom="@+id/textView8"
            android:layout_alignRight="@+id/weightEditText" android:layout_alignEnd="@+id/weightEditText"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/added_text"
              android:id="@+id/textView4" android:layout_below="@+id/textView3"
              android:layout_alignLeft="@+id/textView3" android:layout_alignStart="@+id/textView3"/>
    <TextView
            android:text="@string/zero_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/baseCostTextView"
            android:layout_above="@+id/addedCostTextView" android:layout_alignRight="@+id/addedCostTextView"
            android:layout_alignEnd="@+id/addedCostTextView"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/total_text"
              android:id="@+id/textView8" android:layout_below="@+id/textView4"
              android:layout_alignLeft="@+id/textView4" android:layout_alignStart="@+id/textView4"/>
    <TextView
            android:text="@string/zero_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addedCostTextView"
            android:layout_above="@+id/totalCostTextView" android:layout_alignRight="@+id/totalCostTextView"
            android:layout_alignEnd="@+id/totalCostTextView"/>


</RelativeLayout>
